Physics Static Actor 구현 추가

--- a/DUOLPhysics/DUOLPhysics.vcxproj
+++ b/DUOLPhysics/DUOLPhysics.vcxproj
@@ -325,6 +325,8 @@
     <ClInclude Include="include\DUOLPhysics\Shapes\PhysicsShapeBase.h" />
     <ClInclude Include="include\DUOLPhysics\Shapes\PhysicsBox.h" />
     <ClInclude Include="include\DUOLPhysics\Actor\PhysicsDynamicActor.h" />
+    <ClInclude Include="include\DUOLPhysics\Actor\PhysicsStaticActor.h" />
+    <ClInclude Include="src\DUOLPhysics\Actor\PhysicsStaticActorImpl.h" />
     <ClInclude Include="src\DUOLPhysics\Actor\PhysicsActorBaseImpl.h" />
     <ClInclude Include="src\DUOLPhysics\Shapes\PhysicsShapeBaseImpl.h" />
     <ClInclude Include="src\DUOLPhysics\Actor\PhysicsDynamicActorImpl.h" />
@@ -336,6 +338,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DUOLPhysics\Actor\PhysicsActorBaseImpl.cpp" />
+    <ClCompile Include="src\DUOLPhysics\Actor\PhysicsStaticActor.cpp" />
+    <ClCompile Include="src\DUOLPhysics\Actor\PhysicsStaticActorImpl.cpp" />
     <ClCompile Include="src\DUOLPhysics\Shapes\PhysicsShapeBaseImpl.cpp" />
     <ClCompile Include="src\DUOLPhysics\Actor\PhysicsDynamicActorImpl.cpp" />
     <ClCompile Include="src\DUOLPhysics\Util\PhysicsTypeConverter.cpp" />
