--- a/DUOLEditor/imgui.ini
+++ b/DUOLEditor/imgui.ini
@@ -4,19 +4,15 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, World]
-ViewportPos=791,219
-ViewportId=0xA4D966FE
-Pos=0,629
-Size=328,393
-Collapsed=0
-DockId=0x00000003,0
+Pos=74,54
+Size=328,1022
+Collapsed=1
+DockId=0x00000001,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=791,219
-ViewportId=0xA4D966FE
+Pos=74,99
 Size=328,627
-Collapsed=0
-DockId=0x00000002,0
+Collapsed=1
 
 [Window][Another Window]
 Pos=140,415
@@ -144,8 +140,5 @@ Column 4  Weight=1.0000
 Column 5  Width=-1
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=791,219 Size=328,1022 Split=Y
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=328,627 Selected=0xE87781F4
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=328,393 Selected=0xB41AD0D2
-DockSpace   ID=0x3BC79352 Pos=108,150 Size=1584,1022 CentralNode=1
+DockNode  ID=0x00000001 Pos=182,185 Size=328,1022
 
