--- a/DUOLGraphicsEngine/DUOLGraphicsEngine.vcxproj.filters
+++ b/DUOLGraphicsEngine/DUOLGraphicsEngine.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClInclude Include="framework.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="src\DUOLGraphicsEngine\GraphicsEngine\GraphicsEngine.h">
+    <ClInclude Include="include\DUOLGraphicsEngine\GraphicsEngine\GraphicsEngine.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="src\DUOLGraphicsEngine\ResourceManager\ResourceManager.h">
@@ -27,31 +27,37 @@
     <ClInclude Include="include\DUOLGraphicsEngine\GraphicsEngineFlags.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="src\DUOLGraphicsEngine\ResourceManager\Resource\Material.h">
+    <ClInclude Include="include\DUOLGraphicsEngine\ResourceManager\Resource\Material.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="src\DUOLGraphicsEngine\ResourceManager\Resource\ResourceBundle.h">
+    <ClInclude Include="include\DUOLGraphicsEngine\ResourceManager\Resource\ResourceBundle.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="include\DUOLGraphicsEngine\Export.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="src\DUOLGraphicsEngine\ResourceManager\Resource\Mesh.h">
+    <ClInclude Include="include\DUOLGraphicsEngine\ResourceManager\Resource\Mesh.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="src\DUOLGraphicsEngine\ResourceManager\Resource\Vertex.h">
+    <ClInclude Include="include\DUOLGraphicsEngine\ResourceManager\Resource\Vertex.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="src\DUOLGraphicsEngine\RenderManager\RenderManager.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="src\DUOLGraphicsEngine\ResourceManager\Resource\RenderContantBuffer.h">
+    <ClInclude Include="include\DUOLGraphicsEngine\ResourceManager\Resource\RenderContantBuffer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="src\DUOLGraphicsEngine\ResourceManager\Resource\RenderObject.h">
+    <ClInclude Include="include\DUOLGraphicsEngine\ResourceManager\Resource\RenderObject.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="src\DUOLGraphicsEngine\RenderManager\RenderPipieline.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="src\DUOLGraphicsEngine\Util\Hash\SpookyV2.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="src\DUOLGraphicsEngine\Util\Hash\Hash.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
@@ -78,6 +84,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="src\DUOLGraphicsEngine\RenderManager\RenderPipieline.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DUOLGraphicsEngine\Util\Hash\SpookyV2.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DUOLGraphicsEngine\Util\Hash\Hash.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
