--- a/DUOLGraphicsLibrary/DUOLGraphicsLibrary.vcxproj.filters
+++ b/DUOLGraphicsLibrary/DUOLGraphicsLibrary.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClInclude Include="include\DUOLGraphicsLibrary\Renderer\ResourceViewLayout.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="include\DUOLGraphicsLibrary\Core\Typedef.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
