EffectEditor Box 띄우기 완료.
대략적인 구조 수정과 박스 띄우기 완료

--- a/DUOLEffectEditor/EffectToolDemo/GraphicsEngine/GraphicsEngine.vcxproj
+++ b/DUOLEffectEditor/EffectToolDemo/GraphicsEngine/GraphicsEngine.vcxproj
@@ -165,6 +165,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\Library\inc\SimpleMath.h" />
+    <ClInclude Include="BasicPass.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="d3dx11effect.h" />
     <ClInclude Include="DDSTextureLoader.h" />
@@ -179,17 +180,21 @@
     <ClInclude Include="geometrygenerator.h" />
     <ClInclude Include="IGraphicsEngine.h" />
     <ClInclude Include="InputLayout.h" />
+    <ClInclude Include="IPass.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="RasterizerState.h" />
+    <ClInclude Include="Renderer.h" />
     <ClInclude Include="RenderingData.h" />
     <ClInclude Include="RenderTarget.h" />
     <ClInclude Include="RenderTexture.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="VBIBMesh.h" />
     <ClInclude Include="Typedef.h" />
+    <ClInclude Include="WirePass.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Library\inc\SimpleMath.cpp" />
+    <ClCompile Include="BasicPass.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="DDSTextureLoader.cpp" />
     <ClCompile Include="Depth.cpp" />
@@ -203,6 +208,7 @@
     <ClCompile Include="GeometryGenerator.cpp" />
     <ClCompile Include="IGraphicsEngine.cpp" />
     <ClCompile Include="InputLayout.cpp" />
+    <ClCompile Include="IPass.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -210,11 +216,13 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="RasterizerState.cpp" />
+    <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="RenderingData.cpp" />
     <ClCompile Include="RenderTarget.cpp" />
     <ClCompile Include="RenderTexture.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="VBIBMesh.cpp" />
+    <ClCompile Include="WirePass.cpp" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shader\FX\color.fx">
