--- a/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/imgui.ini
+++ b/DUOLEffectEditor/EffectToolDemo/EffectToolDemo/imgui.ini
@@ -1,10 +1,10 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=60,-4
 Size=400,400
 Collapsed=0
 
 [Window][Test]
-Pos=23,29
-Size=763,422
+Pos=2041,310
+Size=425,336
 Collapsed=0
 
